--- a/index.html
+++ b/index.html
@@ -11,40 +11,40 @@
         <div class="card" id="card1">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="images/volatility-front.jpg"/>
+                    <img src="images/Volatilität_Front_VUCA.jpg"/>
                 </div>
                 <div class="card-back">
-                    <img src="images/volatility-back.jpg"/>
+                    <img src="images/Volatilität_Back_VUCA.jpg"/>
                 </div>
             </div>
         </div>
         <div class="card" id="card2">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="images/uncertainty-front.jpg"/>
+                    <img src="images/Unsicherheit_Front_VUCA.jpg"/>
                 </div>
                 <div class="card-back">
-                    <img src="images/uncertainty-back.jpg"/>
+                    <img src="images/Unsicherheit_Back_VUCA.jpg"/>
                 </div>
             </div>
         </div>
         <div class="card" id="card3">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="images/complexity-front.jpg"/>
+                    <img src="images/Komplexität_Front_VUCA.jpg"/>
                 </div>
                 <div class="card-back">
-                    <img src="images/complexity-back.jpg"/>
+                    <img src="images/Komplexität_Back_VUCA.jpg"/>
                 </div>
             </div>
         </div>
         <div class="card" id="card4">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="images/ambiguity-front.jpg"/>
+                    <img src="images/Ambiguität_Front_VUCA.jpg"/>
                 </div>
                 <div class="card-back">
-                    <img src="images/ambiguity-back.jpg"/>
+                    <img src="images/Ambiguität_Back_VUCA.jpg"/>
                 </div>
             </div>
         </div>
